--- a/app/components/Promotion/promotion.css
+++ b/app/components/Promotion/promotion.css
@@ -1,5 +1,5 @@
 .pro-section{
-    background-image: url(./promotions/promo-bg.jpg);
+    background-image: url(./promo-bg.jpg);
     height: 1200px;
     z-index: 1;
 }
