--- a/app/container/Menu/SpecialMenu.css
+++ b/app/container/Menu/SpecialMenu.css
@@ -57,7 +57,7 @@
         width: 650px;
     }
 
-    .app__specialMenu-menu_img img {
+    .app__specialMenu-menu_img  {
         height: 920px;
     }
 }
